--- a/extend/workflow/view/wfdesc.html
+++ b/extend/workflow/view/wfdesc.html
@@ -1,4 +1,4 @@
-{include file='pub/base' /}
+<link rel="stylesheet" type="text/css" href="__Flow__/workflow-common.css"/>
 <link rel="stylesheet" type="text/css" href="__Flow__/workflow.3.0.css"/>
  <body  style="height: 100%; overflow: hidden;margin: 0px; padding: 0px;"> 
   <div class="panel layout-panel panel-west split-west" style="left: 0px; width:145px; cursor: default;">
@@ -28,7 +28,7 @@
      <div class="panel" >
       <div class="panel-header">属性控制栏</div>
 	  <div class="panel-body" style='height: 800px;'>
-		<iframe src="" id="iframepage" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" onLoad="iFrameHeight()"></iframe>
+		<iframe src="{$url['welcome']}" id="iframepage" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" onLoad="iFrameHeight()"></iframe>
 	  </div></div> 
    </div>
   </div> 
@@ -38,8 +38,10 @@
 <script type="text/javascript" src="__Flow__/jquery-ui-1.9.2-min.js?" ></script>
 <script type="text/javascript" src="__Flow__/jsPlumb-1.3.16-all-min.js"></script>
 <script type="text/javascript" src="__Flow__/workflow.3.0.js"></script>
+<script type="text/javascript" src="__Flow__/lib/layer/2.4/layer.js" ></script>
+<script type="text/javascript" src="__Flow__/workflow-common.3.0.js" ></script>
 <script type="text/javascript">
-	function iFrameHeight() {   
+function iFrameHeight() {   
 		var ifm= document.getElementById("iframepage");   
 		var subWeb = document.frames ? document.frames["iframepage"].document : ifm.contentDocument;   
 		if(ifm != null && subWeb != null) {
@@ -58,17 +60,17 @@ $(function(){
     var _canvas = $("#flowdesign_canvas").Flowdesign({
                       "processData":{$process_data|raw}
                       ,fnClick:function(){ /*步骤单击*/
-						 var url = "{:url('wfatt')}?id="+_canvas.getActiveId();
+						 var url = "{$url['wfatt']}?id="+_canvas.getActiveId();
 						 $('#iframepage').attr('src',url);
                       },fnDbClick:function(){
 						if(confirm("你确定删除步骤吗？")){
 							var activeId = _canvas.getActiveId();//右键当前的ID
-							var url = "{:url('delete_process')}";
+							var url = "{$url['delete_process']}";
 							$.post(url,{"flow_id":the_flow_id,"process_id":activeId},function(data){
 								if(data.status==1){
 									_canvas.delProcess(activeId);
 									var processInfo = _canvas.getProcessInfo();//连接信息
-									var url = "{:url('save_canvas')}";
+									var url = "{$url['save_canvas']}";
 									$.post(url,{"flow_id":the_flow_id,"process_info":processInfo},function(data){
 										location.reload();
 									},'json');
@@ -81,7 +83,7 @@ $(function(){
 		/*保存*/
 		$("#wfSave").bind('click',function(){
 			var processInfo = _canvas.getProcessInfo();//连接信息
-			var url = "{:url('save_canvas')}";
+			var url = "{$url['save_canvas']}";
 			$.post(url,{"flow_id":the_flow_id,"process_info":processInfo},function(data){
 				layer.msg(data.msg);
 			},'json');
@@ -101,7 +103,7 @@ $(function(){
 			});
 		});
 		$("#wfCheck").bind('click',function(){
-			  var url = "{:url('Checkflow')}";
+			  var url = "{$url['Checkflow']}";
 			  $.post(url,{"fid":the_flow_id},function(data){
 				if(data.status==1){
 					layer.msg(data.msg);
@@ -111,7 +113,7 @@ $(function(){
 				},'json');
 		});
 		$("#wfAdd").bind('click',function(){
-			var url = "{:url('add_process')}";
+			var url = "{$url['add_process']}";
 			$.post(url,{"flow_id":the_flow_id},function(data){
 			if(data.status==1){
 				location.reload();
@@ -122,7 +124,7 @@ $(function(){
 		});
 		$("#wfCleam").bind('click',function(){
 			if(confirm("你确定删除步骤吗？")){
-				var url = "{:url('del_allprocess')}";
+				var url = "{$url['del_allprocess']}";
 				$.post(url,{"flow_id":the_flow_id},function(data){
 				if(data.status==1){
 					location.reload();
