--- a/extend/workflow/view/wfjk.html
+++ b/extend/workflow/view/wfjk.html
@@ -1,9 +1,6 @@
-{include file='pub/base' /}
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
-<a href="{:url('index/welcome')}"  class="btn btn-primary radius"> 返回</a>
-</nav>
+<link rel="stylesheet" type="text/css" href="__Flow__/workflow-common.css"/>
 <div class="page-container">
-	<table class="table table-border table-bordered table-bg">
+	<table class="table">
 		<thead>
 			<tr class="text-c">
 				<th>工作流编号</th>
