--- a/extend/workflow/view/wfindex.html
+++ b/extend/workflow/view/wfindex.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="__Flow__/workflow-common.css"/>
 <a onclick="layer_open('添加工作流','{:url($int_url.'/wf/wfadd')}','550px','400px')" class="button ">添加工作流</a><br/>
-<br/>
+
 <div class="page-container">
 <table class="table" >
     <tr>
@@ -22,15 +22,15 @@
 		 </td>
         <td>
 		{if condition='$vo.edit ==""'}
-	   <a class='btn  radius size-S' onclick="layer_open('修改','{:url($int_url.'/wf/wfedit',['id'=>$vo.id])}','550','400')"> 修改</a>
-       <a class='btn  radius size-S' onclick="layer_open('流程设计','{:url($int_url.'/wf/wfdesc',['flow_id'=>$vo.id])}')"> 设计流程</a>
+	   <a class='button' onclick="layer_open('修改','{:url($int_url.'/wf/wfedit',['id'=>$vo.id])}','550','400')"> 修改</a>
+       <a class='button' onclick="layer_open('流程设计','{:url($int_url.'/wf/wfdesc',['flow_id'=>$vo.id])}')"> 设计流程</a>
 		{else/}
 		<a class='btn  radius size-S'> 运行中....</a>
 	   {/if}
 	   {if condition='$vo.status == 0'}
-		   <a class='btn  radius size-S' href="{:url('wfchange',['id'=>$vo['id'],'status'=>1])}" target=> 禁用</a>
+		   <a class='button' href="{:url($int_url.'/wf/wfchange',['id'=>$vo['id'],'status'=>1])}"> 禁用</a>
 			{else/}
-		 <a class='btn  radius size-S' href="{:url('wfchange',['id'=>$vo['id'],'status'=>0])}" target=> 启用</a>
+		 <a class='button' href="{:url($int_url.'/wf/wfchange',['id'=>$vo['id'],'status'=>0])}" > 启用</a>
 	   {/if}
 	   </td>
     </tr>
