--- a/application/index/view/news/view.html
+++ b/application/index/view/news/view.html
@@ -12,7 +12,7 @@
 			</td></tr>
 		</table>
 
-		{:action('wf/wflogs',['id'=>1,'wf_type'=>'news'])}
+		{:\\workflow\\Api::wflogs(1,'news');}
 </article>
 </body>
 </html>
