--- a/extend/workflow/view/wfindex.html
+++ b/extend/workflow/view/wfindex.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="__Flow__/workflow-common.css"/>
-<a onclick="layer_open('添加工作流','{:url($int_url.'/wf/wfadd')}','550px','400px')" class="button ">添加工作流</a><br/>
+<a onclick="layer_open('添加工作流','{:url($int_url.'/wf/wfadd')}','550','400')" class="button ">添加工作流</a><br/>
 
 <div class="page-container">
 <table class="table" >
