--- a/extend/workflow/view/wfjk.html
+++ b/extend/workflow/view/wfjk.html
@@ -1,7 +1,6 @@
 <link rel="stylesheet" type="text/css" href="__Flow__/workflow-common.css"/>
 <div class="page-container">
 	<table class="table">
-		<thead>
 			<tr class="text-c">
 				<th>工作流编号</th>
 				<th >工作流类型</th>
@@ -11,7 +10,6 @@
 				<th >业务描述</th>
 				<th >操作</th>
 			</tr>
-		</thead>
 		<tbody>
 			{volist name='list' id='k'}
 			<tr class="text-c">
@@ -29,7 +27,7 @@
 				<td>{:date('Y-m-d H:i:s',$k['dateline'])}</td>
 				<td>
 				<a onclick='end({$k.id})'>终止</a>  |  
-				{:action('wf/btn',['wf_fid'=>$k.from_id,'wf_type'=>$k.from_table,'status'=>100])}
+				{:\\workflow\\Api::wfbtn($k.from_id,$k.from_table,100);}
 				</td>
 				
 			</tr>
@@ -37,16 +35,19 @@
 		</tbody>
 	</table>
 </div>
+<script type="text/javascript" src="__Flow__/jquery-1.7.2.min.js" ></script>
+<script type="text/javascript" src="__Flow__/lib/layer/2.4/layer.js" ></script>
+<script type="text/javascript" src="__Flow__/workflow-common.3.0.js" ></script>
 <script>
 function end(id){
 		layer.confirm('你确定终止此流程？[此操作无法恢复]',function(index){
 			$.ajax({
 				type: 'POST',
-				url: '{:url("wfend")}?id='+id,
+				url: '{:url($int_url."/wf/wfend")}?id='+id,
 				dataType: 'json',
 				success: function(data){
 					layer.msg('操作成功!',{icon:1,time:1000});
-					//setTimeout("location.reload()",1000);
+					setTimeout("location.reload()",1000);
 				},
 				error:function(data) {
 					console.log(data.msg);
