--- a/public/static/work/workflow-common.css
+++ b/public/static/work/workflow-common.css
@@ -1,30 +1,16 @@
 .page-container {
 	padding: 10px;
 }
-.table
-{
-	 border-radius: 5px;
-	width: 100%;
+.table {
+		width: 100%;
 		empty-cells: show;
 		background-color: transparent;
 		border-spacing: 0;
 		border: 1px solid #ddd;
+		border-collapse: separate;
 		border-left: 0;
-	border-collapse: collapse;
-	margin: 0 auto;
-	text-align: center;
 }
-.table td, table th
-{
-	border: 1px solid #cad9ea;
-	color: #666;
-	height: 30px;
-}
-.table th
-{
-	width: 100px;
-	font-weight: bold;
-	background-color: #f5fafe;
+.table td {
     border-left: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
 	padding: 8px;
@@ -32,8 +18,10 @@
     word-break: break-all;
 }
 
-.table td {
-    border-left: 1px solid #ddd;
+.table th {
+	font-weight: bold;
+	background-color: #f5fafe;
+	    border-left: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
 	padding: 8px;
     line-height: 20px;
