--- a/assets/work/workflow.5.0.css
+++ b/assets/work/workflow.5.0.css
@@ -73,8 +73,8 @@ body {
 
 .table {
     border-radius: 5px;
-    width: 100%;
-    margin: 5px 0;
+    width: 95%;
+    margin: 10px;
     empty-cells: show;
     border-spacing: 0;
     border: 1px solid #ddd;
